Make sure the UI for selecting the database is always visible and fix the path to schema importing in E2E tests.

--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -90,3 +90,7 @@ $vyne-app-theme: mat.define-light-theme($vyne-app-primary, $vyne-app-accent, $vy
 tui-dialog-host {
   z-index: 10000;
 }
+
+tui-dropdown-box {
+  z-index: 1000000 !important;
+}
